--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,3 +21,9 @@ code {
     monospace;
 }
 
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
